--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
-<table border="1" style="text-align: center; width: 100%;">   
-<tr height="100px"> 
-    <td rowspan="4">maths</td>         
-     <td>subject</td> 
-     <td>code</td> 
-     <td>test</td>  
-     <td>class</td>      
-</tr>  
-<tr heigth="200px"> 
-    <td>maths</td> 
-    <td>maths</td> 
-    <td>maths</td> 
-    <td>maths</td>
-</tr> 
-<tr height="200px">               
-    <td>science</td> 
-    <td>science</td> 
-    <td>science</td>
-           
-</tr> 
-<tr heigth="70px"> 
-    <td colspan="4">english 
-</tr>
-</table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <tr height="100px"> 
+        <td rowspan="4">maths</td>         
+         <td>subject</td> 
+         <td>code</td> 
+         <td>test</td>  
+         <td>class</td>      
+    </tr>  
+    <tr heigth="200px"> 
+        <td>maths</td> 
+        <td>maths</td> 
+        <td>maths</td> 
+        <td>maths</td>
+    </tr> 
+    <tr height="200px">               
+        <td>science</td> 
+        <td>science</td> 
+        <td>science</td>
+               
+    </tr> 
+    <tr heigth="70px"> 
+        <td colspan="4">english 
+    </tr>
+    </table>    
+</body>
+</html><table border="1" style="text-align: center; width: 100%;">   
